<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:background="@drawable/side_nav_bar"
    android:gravity="start"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/x2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_x"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sol2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_sol"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/int2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_int"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/der2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_der"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/sini2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_sini"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cosi2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_cosi"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tani2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_tani"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pwr2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_pwr"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/sin2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_sin"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cos2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_cos"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tan2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_tan"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sqrt2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_sqrt"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/ln2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_ln"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/log2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_log"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fac2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_fac"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pi2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_pi"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="1dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/lbracket2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_lbracket"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rbracket2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_rbracket"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/e2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_e"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/comma2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#000000"
            android:padding="8dp"
            android:text="@string/_comma"
            android:textColor="#20c20e"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
